--- a/TestPage.html
+++ b/TestPage.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text=javascript" src="./Tutorial.js"></script>
-    <script type="text=javascript" src="./Task6.js"></script>
+    <!--<script type="text/javascript" src="./Tutorial.js"></script>-->
+    <script type="text/javascript" src="./Task7.js"></script>
 </body>
 </html>
