--- a/calculator.html
+++ b/calculator.html
@@ -28,6 +28,9 @@
       
       <!-- the buttons -->
       <div class="row mt-2">
+        <div>
+            <hr/>
+        </div>
         <div class="col">
           <button id="button_add" class="w-100 btn btn-lg btn-success" type="button">+</button>
         </div>
@@ -39,6 +42,15 @@
         </div>
         <div class="col">
           <button id="button_divide" class="w-100 btn btn-lg btn-warning" type="button">/</button>
+        </div>
+        <div>
+            <br/>
+        </div>
+        <div class="col">
+            <button id="button_clear" class="w-100 btn btn-lg" type="button" style="background-color: black; color: white;">Clear All</button>
+          </div>
+          <div>
+            <hr/>
         </div>
       </div>
 
