working no equals tho

--- a/calculator.html
+++ b/calculator.html
@@ -43,6 +43,13 @@
         <div class="col">
           <button id="button_divide" class="w-100 btn btn-lg btn-warning" type="button">/</button>
         </div>
+    </div>
+    <div>
+        <br/>
+    </div>
+        <div class="col">
+            <button id="button_equal" class="w-50 btn btn-lg" type="button" style="background-color: black; color: orange;">=</button>
+          </div>
         <div>
             <br/>
         </div>
